crates/relune-app/tests/snapshots/layout_json_regression_matrix__layout_regression__simple_blog__bottom_to_top.snap
---
source: crates/relune-app/tests/layout_json_regression_matrix.rs
expression: snapshot
---
{
  "direction": "bottom_to_top",
  "fixture": "simple_blog.sql",
  "styles": {
    "curved": {
      "edges": [
        {
          "control_points": [
            [
              244.39100646972656,
              250.0
            ],
            [
              237.5,
              250.0
            ]
          ],
          "end": [
            237.5,
            288.0
          ],
          "from": "comments",
          "from_columns": [
            "post_id"
          ],
          "is_self_loop": false,
          "label": "post_id",
          "label_x": 177.7449951171875,
          "label_y": 244.59100341796875,
          "nullable": false,
          "route_label_position": [
            240.94500732421875,
            250.0
          ],
          "source_side": "south",
          "start": [
            244.39100646972656,
            212.0
          ],
          "style": "Curved",
          "target_cardinality": "One",
          "target_side": "north",
          "to": "posts",
          "to_columns": [
            "id"
          ]
        },
        {
          "control_points": [],
          "end": [
            230.44500732421875,
            566.0
          ],
          "from": "comments",
          "from_columns": [
            "user_id"
          ],
          "is_self_loop": false,
          "label": "user_id",
          "label_x": 230.4340057373047,
          "label_y": 492.25,
          "nullable": false,
          "route_label_position": [
            230.41799926757813,
            389.0
          ],
          "source_side": "south",
          "start": [
            230.39100646972656,
            212.0
          ],
          "style": "Curved",
          "target_cardinality": "One",
          "target_side": "north",
          "to": "users",
          "to_columns": [
            "id"
          ]
        },
        {
          "control_points": [
            [
              237.5,
              528.0
            ],
            [
              244.44500732421875,
              528.0
            ]
          ],
          "end": [
            244.44500732421875,
            566.0
          ],
          "from": "posts",
          "from_columns": [
            "user_id"
          ],
          "is_self_loop": false,
          "label": "user_id",
          "label_x": 177.76600646972656,
          "label_y": 533.4600219726563,
          "nullable": false,
          "route_label_position": [
            240.97300720214844,
            528.0
          ],
          "source_side": "south",
          "start": [
            237.5,
            490.0
          ],
          "style": "Curved",
          "target_cardinality": "One",
          "target_side": "north",
          "to": "users",
          "to_columns": [
            "id"
          ]
        }
      ],
      "nodes": [
        {
          "column_count": 5,
          "group_index": null,
          "has_self_loop": false,
          "height": 154.0,
          "id": "comments",
          "kind": "Table",
          "width": 349.0,
          "x": 62.89099884033203,
          "y": 56.0
        },
        {
          "column_count": 7,
          "group_index": null,
          "has_self_loop": false,
          "height": 198.0,
          "id": "posts",
          "kind": "Table",
          "width": 363.0,
          "x": 56.0,
          "y": 290.0
        },
        {
          "column_count": 4,
          "group_index": null,
          "has_self_loop": false,
          "height": 132.0,
          "id": "users",
          "kind": "Table",
          "width": 329.0,
          "x": 72.94499969482422,
          "y": 568.0
        }
      ],
      "summary": {
        "edge_count": 3,
        "height": 756.0,
        "node_count": 3,
        "width": 475.0
      }
    },
    "orthogonal": {
      "edges": [
        {
          "control_points": [
            [
              244.39100646972656,
              250.0
            ],
            [
              237.5,
              250.0
            ]
          ],
          "end": [
            237.5,
            288.0
          ],
          "from": "comments",
          "from_columns": [
            "post_id"
          ],
          "is_self_loop": false,
          "label": "post_id",
          "label_x": 177.7449951171875,
          "label_y": 244.59100341796875,
          "nullable": false,
          "route_label_position": [
            240.94500732421875,
            250.0
          ],
          "source_side": "south",
          "start": [
            244.39100646972656,
            212.0
          ],
          "style": "Orthogonal",
          "target_cardinality": "One",
          "target_side": "north",
          "to": "posts",
          "to_columns": [
            "id"
          ]
        },
        {
          "control_points": [],
          "end": [
            230.44500732421875,
            566.0
          ],
          "from": "comments",
          "from_columns": [
            "user_id"
          ],
          "is_self_loop": false,
          "label": "user_id",
          "label_x": 230.4340057373047,
          "label_y": 492.25,
          "nullable": false,
          "route_label_position": [
            230.41799926757813,
            389.0
          ],
          "source_side": "south",
          "start": [
            230.39100646972656,
            212.0
          ],
          "style": "Orthogonal",
          "target_cardinality": "One",
          "target_side": "north",
          "to": "users",
          "to_columns": [
            "id"
          ]
        },
        {
          "control_points": [
            [
              237.5,
              528.0
            ],
            [
              244.44500732421875,
              528.0
            ]
          ],
          "end": [
            244.44500732421875,
            566.0
          ],
          "from": "posts",
          "from_columns": [
            "user_id"
          ],
          "is_self_loop": false,
          "label": "user_id",
          "label_x": 177.76600646972656,
          "label_y": 533.4600219726563,
          "nullable": false,
          "route_label_position": [
            240.97300720214844,
            528.0
          ],
          "source_side": "south",
          "start": [
            237.5,
            490.0
          ],
          "style": "Orthogonal",
          "target_cardinality": "One",
          "target_side": "north",
          "to": "users",
          "to_columns": [
            "id"
          ]
        }
      ],
      "nodes": [
        {
          "column_count": 5,
          "group_index": null,
          "has_self_loop": false,
          "height": 154.0,
          "id": "comments",
          "kind": "Table",
          "width": 349.0,
          "x": 62.89099884033203,
          "y": 56.0
        },
        {
          "column_count": 7,
          "group_index": null,
          "has_self_loop": false,
          "height": 198.0,
          "id": "posts",
          "kind": "Table",
          "width": 363.0,
          "x": 56.0,
          "y": 290.0
        },
        {
          "column_count": 4,
          "group_index": null,
          "has_self_loop": false,
          "height": 132.0,
          "id": "users",
          "kind": "Table",
          "width": 329.0,
          "x": 72.94499969482422,
          "y": 568.0
        }
      ],
      "summary": {
        "edge_count": 3,
        "height": 756.0,
        "node_count": 3,
        "width": 475.0
      }
    },
    "straight": {
      "edges": [
        {
          "control_points": [],
          "end": [
            237.5,
            288.0
          ],
          "from": "comments",
          "from_columns": [
            "post_id"
          ],
          "is_self_loop": false,
          "label": "post_id",
          "label_x": 300.70001220703125,
          "label_y": 255.41799926757813,
          "nullable": false,
          "route_label_position": [
            240.94500732421875,
            250.0
          ],
          "source_side": "south",
          "start": [
            244.39100646972656,
            212.0
          ],
          "style": "Straight",
          "target_cardinality": "One",
          "target_side": "north",
          "to": "posts",
          "to_columns": [
            "id"
          ]
        },
        {
          "control_points": [],
          "end": [
            230.44500732421875,
            566.0
          ],
          "from": "comments",
          "from_columns": [
            "user_id"
          ],
          "is_self_loop": false,
          "label": "user_id",
          "label_x": 230.4340057373047,
          "label_y": 492.25,
          "nullable": false,
          "route_label_position": [
            230.41799926757813,
            389.0
          ],
          "source_side": "south",
          "start": [
            230.39100646972656,
            212.0
          ],
          "style": "Straight",
          "target_cardinality": "One",
          "target_side": "north",
          "to": "users",
          "to_columns": [
            "id"
          ]
        },
        {
          "control_points": [],
          "end": [
            244.44500732421875,
            566.0
          ],
          "from": "posts",
          "from_columns": [
            "user_id"
          ],
          "is_self_loop": false,
          "label": "user_id",
          "label_x": 288.77301025390625,
          "label_y": 523.6320190429688,
          "nullable": false,
          "route_label_position": [
            240.97300720214844,
            528.0
          ],
          "source_side": "south",
          "start": [
            237.5,
            490.0
          ],
          "style": "Straight",
          "target_cardinality": "One",
          "target_side": "north",
          "to": "users",
          "to_columns": [
            "id"
          ]
        }
      ],
      "nodes": [
        {
          "column_count": 5,
          "group_index": null,
          "has_self_loop": false,
          "height": 154.0,
          "id": "comments",
          "kind": "Table",
          "width": 349.0,
          "x": 62.89099884033203,
          "y": 56.0
        },
        {
          "column_count": 7,
          "group_index": null,
          "has_self_loop": false,
          "height": 198.0,
          "id": "posts",
          "kind": "Table",
          "width": 363.0,
          "x": 56.0,
          "y": 290.0
        },
        {
          "column_count": 4,
          "group_index": null,
          "has_self_loop": false,
          "height": 132.0,
          "id": "users",
          "kind": "Table",
          "width": 329.0,
          "x": 72.94499969482422,
          "y": 568.0
        }
      ],
      "summary": {
        "edge_count": 3,
        "height": 756.0,
        "node_count": 3,
        "width": 475.0
      }
    }
  }
}
