crates/relune-app/tests/snapshots/layout_json_regression_matrix__layout_regression__simple_blog__left_to_right.snap
---
source: crates/relune-app/tests/layout_json_regression_matrix.rs
expression: snapshot
---
{
  "direction": "left_to_right",
  "fixture": "simple_blog.sql",
  "styles": {
    "curved": {
      "edges": [
        {
          "control_points": [
            [
              1112.0,
              150.78900146484375
            ],
            [
              1112.0,
              99.0
            ]
          ],
          "end": [
            970.0,
            99.0
          ],
          "from": "comments",
          "from_columns": [
            "post_id"
          ],
          "is_self_loop": false,
          "label": "post_id",
          "label_x": 1112.0,
          "label_y": 124.8949966430664,
          "nullable": false,
          "route_label_position": [
            1112.0,
            124.8949966430664
          ],
          "source_side": "west",
          "start": [
            1254.0,
            150.78900146484375
          ],
          "style": "Curved",
          "target_cardinality": "One",
          "target_side": "east",
          "to": "posts",
          "to_columns": [
            "id"
          ]
        },
        {
          "control_points": [
            [
              1228.0,
              136.78900146484375
            ],
            [
              1228.0,
              32.0
            ],
            [
              375.0,
              32.0
            ],
            [
              375.0,
              118.8949966430664
            ]
          ],
          "end": [
            349.0,
            118.8949966430664
          ],
          "from": "comments",
          "from_columns": [
            "user_id"
          ],
          "is_self_loop": false,
          "label": "user_id",
          "label_x": 810.447021484375,
          "label_y": 32.0,
          "nullable": false,
          "route_label_position": [
            810.447021484375,
            32.0
          ],
          "source_side": "west",
          "start": [
            1254.0,
            136.78900146484375
          ],
          "style": "Curved",
          "target_cardinality": "One",
          "target_side": "east",
          "to": "users",
          "to_columns": [
            "id"
          ]
        },
        {
          "control_points": [
            [
              491.0,
              117.0
            ],
            [
              491.0,
              132.89500427246094
            ]
          ],
          "end": [
            349.0,
            132.89500427246094
          ],
          "from": "posts",
          "from_columns": [
            "user_id"
          ],
          "is_self_loop": false,
          "label": "user_id",
          "label_x": 491.0,
          "label_y": 124.9469985961914,
          "nullable": false,
          "route_label_position": [
            491.0,
            124.9469985961914
          ],
          "source_side": "west",
          "start": [
            633.0,
            117.0
          ],
          "style": "Curved",
          "target_cardinality": "One",
          "target_side": "east",
          "to": "users",
          "to_columns": [
            "id"
          ]
        }
      ],
      "nodes": [
        {
          "column_count": 5,
          "group_index": null,
          "has_self_loop": false,
          "height": 138.0,
          "id": "comments",
          "kind": "Table",
          "width": 291.0,
          "x": 1256.0,
          "y": 73.78900146484375
        },
        {
          "column_count": 7,
          "group_index": null,
          "has_self_loop": false,
          "height": 174.0,
          "id": "posts",
          "kind": "Table",
          "width": 333.0,
          "x": 635.0,
          "y": 56.0
        },
        {
          "column_count": 4,
          "group_index": null,
          "has_self_loop": false,
          "height": 120.0,
          "id": "users",
          "kind": "Table",
          "width": 291.0,
          "x": 56.0,
          "y": 82.8949966430664
        }
      ],
      "summary": {
        "edge_count": 3,
        "height": 286.0,
        "node_count": 3,
        "width": 1603.0
      }
    },
    "orthogonal": {
      "edges": [
        {
          "control_points": [
            [
              1112.0,
              150.78900146484375
            ],
            [
              1112.0,
              99.0
            ]
          ],
          "end": [
            970.0,
            99.0
          ],
          "from": "comments",
          "from_columns": [
            "post_id"
          ],
          "is_self_loop": false,
          "label": "post_id",
          "label_x": 1112.0,
          "label_y": 124.8949966430664,
          "nullable": false,
          "route_label_position": [
            1112.0,
            124.8949966430664
          ],
          "source_side": "west",
          "start": [
            1254.0,
            150.78900146484375
          ],
          "style": "Orthogonal",
          "target_cardinality": "One",
          "target_side": "east",
          "to": "posts",
          "to_columns": [
            "id"
          ]
        },
        {
          "control_points": [
            [
              1228.0,
              136.78900146484375
            ],
            [
              1228.0,
              32.0
            ],
            [
              375.0,
              32.0
            ],
            [
              375.0,
              118.8949966430664
            ]
          ],
          "end": [
            349.0,
            118.8949966430664
          ],
          "from": "comments",
          "from_columns": [
            "user_id"
          ],
          "is_self_loop": false,
          "label": "user_id",
          "label_x": 810.447021484375,
          "label_y": 32.0,
          "nullable": false,
          "route_label_position": [
            810.447021484375,
            32.0
          ],
          "source_side": "west",
          "start": [
            1254.0,
            136.78900146484375
          ],
          "style": "Orthogonal",
          "target_cardinality": "One",
          "target_side": "east",
          "to": "users",
          "to_columns": [
            "id"
          ]
        },
        {
          "control_points": [
            [
              491.0,
              117.0
            ],
            [
              491.0,
              132.89500427246094
            ]
          ],
          "end": [
            349.0,
            132.89500427246094
          ],
          "from": "posts",
          "from_columns": [
            "user_id"
          ],
          "is_self_loop": false,
          "label": "user_id",
          "label_x": 491.0,
          "label_y": 124.9469985961914,
          "nullable": false,
          "route_label_position": [
            491.0,
            124.9469985961914
          ],
          "source_side": "west",
          "start": [
            633.0,
            117.0
          ],
          "style": "Orthogonal",
          "target_cardinality": "One",
          "target_side": "east",
          "to": "users",
          "to_columns": [
            "id"
          ]
        }
      ],
      "nodes": [
        {
          "column_count": 5,
          "group_index": null,
          "has_self_loop": false,
          "height": 138.0,
          "id": "comments",
          "kind": "Table",
          "width": 291.0,
          "x": 1256.0,
          "y": 73.78900146484375
        },
        {
          "column_count": 7,
          "group_index": null,
          "has_self_loop": false,
          "height": 174.0,
          "id": "posts",
          "kind": "Table",
          "width": 333.0,
          "x": 635.0,
          "y": 56.0
        },
        {
          "column_count": 4,
          "group_index": null,
          "has_self_loop": false,
          "height": 120.0,
          "id": "users",
          "kind": "Table",
          "width": 291.0,
          "x": 56.0,
          "y": 82.8949966430664
        }
      ],
      "summary": {
        "edge_count": 3,
        "height": 286.0,
        "node_count": 3,
        "width": 1603.0
      }
    },
    "straight": {
      "edges": [
        {
          "control_points": [],
          "end": [
            970.0,
            99.0
          ],
          "from": "comments",
          "from_columns": [
            "post_id"
          ],
          "is_self_loop": false,
          "label": "post_id",
          "label_x": 1043.1529541015625,
          "label_y": 100.14199829101563,
          "nullable": false,
          "route_label_position": [
            1112.0,
            124.8949966430664
          ],
          "source_side": "west",
          "start": [
            1254.0,
            150.78900146484375
          ],
          "style": "Straight",
          "target_cardinality": "One",
          "target_side": "east",
          "to": "posts",
          "to_columns": [
            "id"
          ]
        },
        {
          "control_points": [],
          "end": [
            349.0,
            118.8949966430664
          ],
          "from": "comments",
          "from_columns": [
            "user_id"
          ],
          "is_self_loop": false,
          "label": "user_id",
          "label_x": 1027.512939453125,
          "label_y": 144.31300354003906,
          "nullable": false,
          "route_label_position": [
            801.5,
            127.84200286865234
          ],
          "source_side": "west",
          "start": [
            1254.0,
            136.78900146484375
          ],
          "style": "Straight",
          "target_cardinality": "One",
          "target_side": "east",
          "to": "users",
          "to_columns": [
            "id"
          ]
        },
        {
          "control_points": [],
          "end": [
            349.0,
            132.89500427246094
          ],
          "from": "posts",
          "from_columns": [
            "user_id"
          ],
          "is_self_loop": false,
          "label": "user_id",
          "label_x": 421.34100341796875,
          "label_y": 152.88299560546875,
          "nullable": false,
          "route_label_position": [
            491.0,
            124.9469985961914
          ],
          "source_side": "west",
          "start": [
            633.0,
            117.0
          ],
          "style": "Straight",
          "target_cardinality": "One",
          "target_side": "east",
          "to": "users",
          "to_columns": [
            "id"
          ]
        }
      ],
      "nodes": [
        {
          "column_count": 5,
          "group_index": null,
          "has_self_loop": false,
          "height": 138.0,
          "id": "comments",
          "kind": "Table",
          "width": 291.0,
          "x": 1256.0,
          "y": 73.78900146484375
        },
        {
          "column_count": 7,
          "group_index": null,
          "has_self_loop": false,
          "height": 174.0,
          "id": "posts",
          "kind": "Table",
          "width": 333.0,
          "x": 635.0,
          "y": 56.0
        },
        {
          "column_count": 4,
          "group_index": null,
          "has_self_loop": false,
          "height": 120.0,
          "id": "users",
          "kind": "Table",
          "width": 291.0,
          "x": 56.0,
          "y": 82.8949966430664
        }
      ],
      "summary": {
        "edge_count": 3,
        "height": 286.0,
        "node_count": 3,
        "width": 1603.0
      }
    }
  }
}
