crates/relune-app/tests/snapshots/layout_json_regression_matrix__layout_regression__simple_blog__right_to_left.snap
---
source: crates/relune-app/tests/layout_json_regression_matrix.rs
expression: snapshot
---
{
  "direction": "right_to_left",
  "fixture": "simple_blog.sql",
  "styles": {
    "curved": {
      "edges": [
        {
          "control_points": [
            [
              491.0,
              156.78900146484375
            ],
            [
              491.0,
              105.0
            ]
          ],
          "end": [
            633.0,
            105.0
          ],
          "from": "comments",
          "from_columns": [
            "post_id"
          ],
          "is_self_loop": false,
          "label": "post_id",
          "label_x": 493.0880126953125,
          "label_y": 105.0,
          "nullable": false,
          "route_label_position": [
            491.0,
            130.89500427246094
          ],
          "source_side": "east",
          "start": [
            349.0,
            156.78900146484375
          ],
          "style": "Curved",
          "target_cardinality": "One",
          "target_side": "west",
          "to": "posts",
          "to_columns": [
            "id"
          ]
        },
        {
          "control_points": [
            [
              801.5,
              142.78900146484375
            ],
            [
              801.5,
              124.8949966430664
            ]
          ],
          "end": [
            1254.0,
            124.8949966430664
          ],
          "from": "comments",
          "from_columns": [
            "user_id"
          ],
          "is_self_loop": false,
          "label": "user_id",
          "label_x": 579.7239990234375,
          "label_y": 142.78900146484375,
          "nullable": false,
          "route_label_position": [
            801.5,
            133.8419952392578
          ],
          "source_side": "east",
          "start": [
            349.0,
            142.78900146484375
          ],
          "style": "Curved",
          "target_cardinality": "One",
          "target_side": "west",
          "to": "users",
          "to_columns": [
            "id"
          ]
        },
        {
          "control_points": [
            [
              1112.0,
              123.0
            ],
            [
              1112.0,
              138.89500427246094
            ]
          ],
          "end": [
            1254.0,
            138.89500427246094
          ],
          "from": "posts",
          "from_columns": [
            "user_id"
          ],
          "is_self_loop": false,
          "label": "user_id",
          "label_x": 1153.364990234375,
          "label_y": 150.87600708007813,
          "nullable": false,
          "route_label_position": [
            1112.0,
            130.94700622558594
          ],
          "source_side": "east",
          "start": [
            970.0,
            123.0
          ],
          "style": "Curved",
          "target_cardinality": "One",
          "target_side": "west",
          "to": "users",
          "to_columns": [
            "id"
          ]
        }
      ],
      "nodes": [
        {
          "column_count": 5,
          "group_index": null,
          "has_self_loop": false,
          "height": 138.0,
          "id": "comments",
          "kind": "Table",
          "width": 291.0,
          "x": 56.0,
          "y": 73.78900146484375
        },
        {
          "column_count": 7,
          "group_index": null,
          "has_self_loop": false,
          "height": 174.0,
          "id": "posts",
          "kind": "Table",
          "width": 333.0,
          "x": 635.0,
          "y": 56.0
        },
        {
          "column_count": 4,
          "group_index": null,
          "has_self_loop": false,
          "height": 120.0,
          "id": "users",
          "kind": "Table",
          "width": 291.0,
          "x": 1256.0,
          "y": 82.8949966430664
        }
      ],
      "summary": {
        "edge_count": 3,
        "height": 286.0,
        "node_count": 3,
        "width": 1603.0
      }
    },
    "orthogonal": {
      "edges": [
        {
          "control_points": [
            [
              491.0,
              156.78900146484375
            ],
            [
              491.0,
              105.0
            ]
          ],
          "end": [
            633.0,
            105.0
          ],
          "from": "comments",
          "from_columns": [
            "post_id"
          ],
          "is_self_loop": false,
          "label": "post_id",
          "label_x": 493.0880126953125,
          "label_y": 105.0,
          "nullable": false,
          "route_label_position": [
            491.0,
            130.89500427246094
          ],
          "source_side": "east",
          "start": [
            349.0,
            156.78900146484375
          ],
          "style": "Orthogonal",
          "target_cardinality": "One",
          "target_side": "west",
          "to": "posts",
          "to_columns": [
            "id"
          ]
        },
        {
          "control_points": [
            [
              801.5,
              142.78900146484375
            ],
            [
              801.5,
              124.8949966430664
            ]
          ],
          "end": [
            1254.0,
            124.8949966430664
          ],
          "from": "comments",
          "from_columns": [
            "user_id"
          ],
          "is_self_loop": false,
          "label": "user_id",
          "label_x": 579.7239990234375,
          "label_y": 142.78900146484375,
          "nullable": false,
          "route_label_position": [
            801.5,
            133.8419952392578
          ],
          "source_side": "east",
          "start": [
            349.0,
            142.78900146484375
          ],
          "style": "Orthogonal",
          "target_cardinality": "One",
          "target_side": "west",
          "to": "users",
          "to_columns": [
            "id"
          ]
        },
        {
          "control_points": [
            [
              1112.0,
              123.0
            ],
            [
              1112.0,
              138.89500427246094
            ]
          ],
          "end": [
            1254.0,
            138.89500427246094
          ],
          "from": "posts",
          "from_columns": [
            "user_id"
          ],
          "is_self_loop": false,
          "label": "user_id",
          "label_x": 1153.364990234375,
          "label_y": 150.87600708007813,
          "nullable": false,
          "route_label_position": [
            1112.0,
            130.94700622558594
          ],
          "source_side": "east",
          "start": [
            970.0,
            123.0
          ],
          "style": "Orthogonal",
          "target_cardinality": "One",
          "target_side": "west",
          "to": "users",
          "to_columns": [
            "id"
          ]
        }
      ],
      "nodes": [
        {
          "column_count": 5,
          "group_index": null,
          "has_self_loop": false,
          "height": 138.0,
          "id": "comments",
          "kind": "Table",
          "width": 291.0,
          "x": 56.0,
          "y": 73.78900146484375
        },
        {
          "column_count": 7,
          "group_index": null,
          "has_self_loop": false,
          "height": 174.0,
          "id": "posts",
          "kind": "Table",
          "width": 333.0,
          "x": 635.0,
          "y": 56.0
        },
        {
          "column_count": 4,
          "group_index": null,
          "has_self_loop": false,
          "height": 120.0,
          "id": "users",
          "kind": "Table",
          "width": 291.0,
          "x": 1256.0,
          "y": 82.8949966430664
        }
      ],
      "summary": {
        "edge_count": 3,
        "height": 286.0,
        "node_count": 3,
        "width": 1603.0
      }
    },
    "straight": {
      "edges": [
        {
          "control_points": [],
          "end": [
            633.0,
            105.0
          ],
          "from": "comments",
          "from_columns": [
            "post_id"
          ],
          "is_self_loop": false,
          "label": "post_id",
          "label_x": 559.8469848632813,
          "label_y": 106.14199829101563,
          "nullable": false,
          "route_label_position": [
            491.0,
            130.89500427246094
          ],
          "source_side": "east",
          "start": [
            349.0,
            156.78900146484375
          ],
          "style": "Straight",
          "target_cardinality": "One",
          "target_side": "west",
          "to": "posts",
          "to_columns": [
            "id"
          ]
        },
        {
          "control_points": [],
          "end": [
            1254.0,
            124.8949966430664
          ],
          "from": "comments",
          "from_columns": [
            "user_id"
          ],
          "is_self_loop": false,
          "label": "user_id",
          "label_x": 575.4869995117188,
          "label_y": 150.31300354003906,
          "nullable": false,
          "route_label_position": [
            801.5,
            133.8419952392578
          ],
          "source_side": "east",
          "start": [
            349.0,
            142.78900146484375
          ],
          "style": "Straight",
          "target_cardinality": "One",
          "target_side": "west",
          "to": "users",
          "to_columns": [
            "id"
          ]
        },
        {
          "control_points": [],
          "end": [
            1254.0,
            138.89500427246094
          ],
          "from": "posts",
          "from_columns": [
            "user_id"
          ],
          "is_self_loop": false,
          "label": "user_id",
          "label_x": 1181.6590576171875,
          "label_y": 158.88299560546875,
          "nullable": false,
          "route_label_position": [
            1112.0,
            130.94700622558594
          ],
          "source_side": "east",
          "start": [
            970.0,
            123.0
          ],
          "style": "Straight",
          "target_cardinality": "One",
          "target_side": "west",
          "to": "users",
          "to_columns": [
            "id"
          ]
        }
      ],
      "nodes": [
        {
          "column_count": 5,
          "group_index": null,
          "has_self_loop": false,
          "height": 138.0,
          "id": "comments",
          "kind": "Table",
          "width": 291.0,
          "x": 56.0,
          "y": 73.78900146484375
        },
        {
          "column_count": 7,
          "group_index": null,
          "has_self_loop": false,
          "height": 174.0,
          "id": "posts",
          "kind": "Table",
          "width": 333.0,
          "x": 635.0,
          "y": 56.0
        },
        {
          "column_count": 4,
          "group_index": null,
          "has_self_loop": false,
          "height": 120.0,
          "id": "users",
          "kind": "Table",
          "width": 291.0,
          "x": 1256.0,
          "y": 82.8949966430664
        }
      ],
      "summary": {
        "edge_count": 3,
        "height": 286.0,
        "node_count": 3,
        "width": 1603.0
      }
    }
  }
}
